# solana-sigverify

./: COPYRIGHT  Cargo.toml  README.md
examples/: README.md
examples/sig-client/: Cargo.toml
examples/sig-client/src/: main.rs
examples/sig-data/: Cargo.toml
examples/sig-data/src/: lib.rs
examples/sig-program/: Cargo.toml
examples/sig-program/src/: lib.rs
native-sigverify/: Cargo.toml
native-sigverify/src/: lib.rs
native-sigverify/src/snapshots/: solana_native_sigverify__test__single_signature__new_instruction_snapshot.snap  solana_native_sigverify__test__two_signatures__new_instruction_snapshot.snap  solana_native_sigverify__test__two_signatures_diff_keys__new_instruction_snapshot.snap  solana_native_sigverify__test__two_signatures_prefix_message__new_instruction_snapshot.snap  solana_native_sigverify__test__two_signatures_prefix_message_diff_keys__new_instruction_snapshot.snap  solana_native_sigverify__test__two_signatures_same_message__new_instruction_snapshot.snap  solana_native_sigverify__test__two_signatures_same_message_diff_keys__new_instruction_snapshot.snap
sigverify/: Cargo.toml
sigverify/src/: algo.rs  api.rs  instruction.rs  lib.rs  program.rs  stdx.rs  verifier.rs
src/: algo.rs  api.rs  ed25519_program.rs  instruction.rs  lib.rs  program.rs  stdx.rs  verifier.rs  verify_program.rs
src/snapshots/: solana_sigverify__ed25519_program__test__two_signatures_diff_keys__new_instruction_snapshot.snap  solana_sigverify__ed25519_program__test__two_signatures_prefix_message_diff_keys__new_instruction_snapshot.snap  solana_sigverify__ed25519_program__test__two_signatures_prefix_message_same_key__new_instruction_snapshot.snap  solana_sigverify__ed25519_program__test__two_signatures_same_key__new_instruction_snapshot.snap  solana_sigverify__ed25519_program__test__two_signatures_same_message_diff_keys__new_instruction_snapshot.snap  solana_sigverify__ed25519_program__test__two_signatures_same_message_same_key__new_instruction_snapshot.snap  solana_sigverify__verify_program__test__single_signature__new_instruction_snapshot.snap  solana_sigverify__verify_program__test__two_signatures__new_instruction_snapshot.snap  solana_sigverify__verify_program__test__two_signatures_diff_keys__new_instruction_snapshot.snap  solana_sigverify__verify_program__test__two_signatures_prefix_message__new_instruction_snapshot.snap  solana_sigverify__verify_program__test__two_signatures_prefix_message_diff_keys__new_instruction_snapshot.snap  solana_sigverify__verify_program__test__two_signatures_same_message__new_instruction_snapshot.snap  solana_sigverify__verify_program__test__two_signatures_same_message_diff_keys__new_instruction_snapshot.snap
