# Copyright 2024 by Composable Foundation
# Copyright 2025 by Michał Nazarewicz <mina86@mina86.com>

[package]
name = "solana-sigverify"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
lib = []

[dependencies]
bytemuck = { version = "1.21", features = ["derive", "must_cast"] }
derive_more = { version = "1", features = ["as_ref", "deref", "deref_mut", "from", "into"] }
solana-program = "1.18.26"

[dev-dependencies]
ed25519-dalek = "=1.0.1"   # Must match solana-sdk’s dependency.]
insta = "1.42.1"
solana-sdk = "1.18.26"
