# Copyright 2024 by Composable Foundation
# Copyright 2025 by Michał Nazarewicz <mina86@mina86.com>

[workspace.package]
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
version = "0.0.0"
edition = "2021"

[workspace]
members = ["examples/*", "native-sigverify", "sigverify"]
resolver = "2"

[workspace.dependencies]
bytemuck = { version = "1.21", default-features = false }
derive_more = { version = "1", default-features = false }
ed25519-dalek = "=1.0.1" # Must match solana-sdk’s dependency.
insta = "1.42.1"
rand = { version = "0.9.0", default-features = false }
solana-client = { version = "1.18.26", default-features = false }
solana-program = { version = "1.18.26", default-features = false }
solana-sdk = { version = "1.18.26", default-features = false }
solana-transaction-status = { version = "1.18.26", default-features = false }

solana-native-sigverify = { path = "native-sigverify" }
solana-sigverify = { path = "sigverify" }
sig-data = { path = "examples/sig-data" }
