# Copyright 2024 by Composable Foundation
# Copyright 2025 by Michał Nazarewicz <mina86@mina86.com>

[workspace.package]
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
version = "0.2.1"
description = "A Solana program and library for doing cryptographic signature verification."
homepage = "https://codeberg.org/mina86/solana-sigverify"
license = "GPL-2.0-or-later"
edition = "2024"

[workspace]
members = ["examples/*", "native-sigverify", "sigverify"]
resolver = "2"

[workspace.dependencies]
bytemuck = { version = "1.23", default-features = false }
derive_more = { version = "2.0", default-features = false }
ed25519-dalek = "2.2"
insta = "1.43"
rand = { version = "0.9", default-features = false }
solana-client = { version = "2.3", default-features = false }
solana-program = { version = "2.3", default-features = false }
solana-sdk = { version = "2.3", default-features = false }
solana-ed25519-program = { version = "2.2", default-features = false }
solana-system-interface = { version = "1.0", default-features = false }
solana-transaction-status = { version = "2.3", default-features = false }

solana-native-sigverify = { version = "0.2", path = "native-sigverify" }
solana-sigverify = { version = "0.2", path = "sigverify" }
sig-data = { path = "examples/sig-data" }
