# Copyright 2024 by Composable Foundation
# Copyright 2025 by Michał Nazarewicz <mina86@mina86.com>

[package]
name = "solana-native-sigverify"
description = "A library for interacting with Solana signature programs."
authors.workspace = true
version.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { workspace = true, features = ["must_cast", "derive"] }
solana-program.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
insta.workspace = true
solana-sdk = { workspace = true, features = ["full"] }
solana-ed25519-program.workspace = true
